--- a/pages/photoGallery.html
+++ b/pages/photoGallery.html
@@ -52,54 +52,54 @@
         <div class="filterableElementsPG">
             <!--start of By Me section-->
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/braised_beef_tomato_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/braised_beef_tomato_by_me.jpg" 
                     alt="Tomato-based Braised Beef">
                 <h3>Tomato Braised Beef</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/braised_pork_rice_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/braised_pork_rice_by_me.jpg" 
                     alt="Braised Pork with Rice">
                 <h3>Braised Pork with Rice</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/korean_beef_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/korean_beef_by_me.jpg" 
                     alt="Korean Style Beef with Kimchi and Mushrooms">
                 <h3>Korean Style Beef</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/pork_belly_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/pork_belly_by_me.jpg" 
                     alt="Pork Belly with Rice">
                 <h3>Pork Belly with Rice</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/pork_ribs_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/pork_ribs_by_me.jpg" 
                     alt="Pork Ribs with Potatoes">
                 <h3>Pork Ribs with Potatoes</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/Sichuan_boiled_beef_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/Sichuan_boiled_beef_by_me.jpg" 
                     alt="Sichuan Boiled Beef">
                 <h3>Sichuan Boiled Beef</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/kung_pao_chicken_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/kung_pao_chicken_by_me.jpg" 
                     alt="Kung Pao Chicken">
                 <h3>Kung Pao Chicken</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/steak_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/steak_by_me.jpg" 
                     alt="Home-made Steak">
                 <h3>Home-made Steak</h3>
             </div>
             <div class="elementByMe">
-                <img class="picture-pg" src="../images/Photo_gallery_by_me/sandwich_by_me.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_by_me/sandwich_by_me.jpg" 
                     alt="Sandwich">
                 <h3>Sandwich</h3>
             </div>
             <!--end of By Me section-->
             <!--start of Dine Out section-->
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/corella.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/corella.jpg" 
                     alt="Corella">
                 <!-- <div class="description-pg"> -->
                 <h3>Corella</h3>
@@ -110,7 +110,7 @@
                 <!-- </div> -->
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/John's_kitchen.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/John's_kitchen.jpg" 
                     alt="John's Kitchen">
                 <h4>John's Kitchen</h4>
                 <p>
@@ -119,7 +119,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/lantern_rooms.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/lantern_rooms.jpg" 
                     alt="Laterne Rooms">
                 <h4>Lanterne Rooms</h4>
                 <p>
@@ -128,7 +128,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/ms_ba_co.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/ms_ba_co.jpg" 
                     alt="Ms Ba Cô">
                 <h3>Ms Ba Cô</h3>
                 <p>
@@ -137,7 +137,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/raku.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/raku.jpg" 
                     alt="Raku">
                 <h3>Raku</h3>
                 <p>
@@ -146,7 +146,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/rebel_rebel.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/rebel_rebel.jpg" 
                     alt="Rebel Rebel">
                 <h3>Rebel Rebel</h3>
                 <p>
@@ -155,7 +155,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/Ginseng.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/Ginseng.jpg" 
                     alt="Ginseng">
                 <h3>Ginseng</h3>
                 <p>
@@ -164,7 +164,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/Super_emoji.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/Super_emoji.jpg" 
                     alt="Super Emoji">
                 <h3>Super Emoji</h3>
                 <p>
@@ -173,7 +173,7 @@
                 </p>
             </div>
             <div class="elementDineOut">
-                <img class="picture-pg" src="../images/Photo_gallery_dine_out/Kimchi.png" 
+                <img class="picture-pg" src="../images/Photo_gallery_dine_out/Kimchi.jpg" 
                     alt="Chez Kimchi">
                 <h3>Chez Kimchi</h3>
                 <p>
