--- a/pages/originalRecipe.html
+++ b/pages/originalRecipe.html
@@ -45,7 +45,7 @@
         <div class="slideshow-container">
             <!-- start of the image and description in the slideshow -->
             <div class="mySlides fade">
-                <img src="../images/Original_recipe/ingredients.png" class="full-width" alt="ingredients">
+                <img src="../images/Original_recipe/ingredients.jpg" class="full-width" alt="ingredients">
                 <!-- start of the dots to switch between slides -->
                 <div style="text-align:center">
                     <span class="dot" onclick="currentSlide(1)"></span>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="mySlides fade">
-                <img src="../images/Original_recipe/preparation.png" class="full-width" alt="preparation steps">
+                <img src="../images/Original_recipe/preparation.jpg" class="full-width" alt="preparation steps">
                 <!-- start of the dots to switch between slides -->
                 <div style="text-align:center">
                     <span class="dot" onclick="currentSlide(1)"></span>
@@ -86,7 +86,7 @@
             </div>
         
             <div class="mySlides fade">
-                <img src="../images/Original_recipe/final.png" class="full-width" alt="final steps">
+                <img src="../images/Original_recipe/final.jpg" class="full-width" alt="final steps">
                 <!-- start of the dots to switch between slides -->
                 <div style="text-align:center">
                     <span class="dot" onclick="currentSlide(1)"></span>
